# ModelSpec

./: .gitignore  AGENTS.md  LICENSE  README.md  corpus.txt.csv  mkdocs.yml  pyproject.toml
docs/: analytics.md  architecture.md  cli.md  development.md  extractors.md  helpers.md  index.md  overview.md  pipeline.md  quantization-and-merge.md  roadmap.md  schema-review.md  schema.md
examples/: repos.txt
modelspec/: __init__.py  cli.py  explain.py  query.py
modelspec/analytics/: __init__.py  batch.py  report.py
modelspec/extractors/: __init__.py  base.py  config_json.py  gguf.py  license.py  merge.py  safetensors.py  tokenizer.py
modelspec/io/: __init__.py  hf_fetcher.py
modelspec/pipeline/: __init__.py  cross_validate.py  merger.py  orchestrator.py
modelspec/schema/: __init__.py  spec.py
tests/: conftest.py  test_explain.py  test_query.py
tests/analytics/: test_batch.py  test_cli_batch.py  test_report.py
tests/extractors/: test_config_json.py  test_gguf.py  test_license.py  test_merge.py  test_quantization.py  test_safetensors.py  test_tokenizer.py
tests/io/: test_hf_fetcher.py
tests/pipeline/: test_cross_validate.py  test_merger.py  test_orchestrator.py
tests/schema/: test_helpers.py  test_spec.py
