[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelspec"
version = "0.1.0"
description = "ParaPulse ModelSpec — extract and normalize LLM model specifications from multiple sources"
readme = "docs/overview.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2",
    "huggingface_hub>=0.20",
    "requests>=2.28",
]

[project.optional-dependencies]
gguf = ["gguf>=0.10"]
yaml = ["PyYAML>=6"]
dev = ["pytest>=7", "PyYAML>=6", "gguf>=0.10"]
docs = ["mkdocs-material>=9.5"]
all = ["modelspec[gguf,yaml]"]

[project.scripts]
modelspec = "modelspec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["modelspec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
